# font-awesome-renderer

./: .gitignore  pyproject.toml
.github/workflows/: release-all.yml  release-icon-pack.yml  release.yml  render-all-icon_packs.yml  render-icon-pack.yml
config/: config.json  stream_deck.json  stream_dock.json
src/: consts.py  render.py  renderer.py
